--- a/taskpane.html
+++ b/taskpane.html
@@ -23,10 +23,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- Optional: Add your custom scripts here -->
-    <script src="https://inquisitive-fierce-painter.glitch.me/taskpane.js"></script>
+    <script src="https://raw.githubusercontent.com/juanosses/powerpoint-tools/f27b62e5f6ffd15879b74dea36ec055834c381f5/taskpane.js"></script>
 
     <!-- Template styles -->
-    <link href="https://inquisitive-fierce-painter.glitch.me/taskpane.css" rel="stylesheet" type="text/css" />
+    <link href="https://raw.githubusercontent.com/juanosses/powerpoint-tools/main/taskpane.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
